# academic-observatory-api

./: .gitignore  Dockerfile  README.md  requirements.txt  setup.cfg
.github/workflows/: api.yml  unit-tests.yml
academic_observatory_api/: openapi.yaml.jinja2
academic_observatory_api/client/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
academic_observatory_api/client/api/: __init__.py  academic_observatory_api.py  observatory_api.py
academic_observatory_api/client/model/: __init__.py  pit_response.py  query_response.py
academic_observatory_api/client/test/: test_academic_observatory_api.py  test_observatory_api.py  test_pit_response.py  test_query_response.py
academic_observatory_api/server/: api.py  app.py  elastic.py  utils.py
academic_observatory_api/tests/: test_openapi_renderer.py
docs/: ObservatoryApi.md  api_client.md  conf.py  deploy_terraform.md  index.rst  requirements.txt
docs/_templates/: footer.html
docs/api/: AcademicObservatoryApi.md  ObservatoryApi.md  api_client.md  api_rest.rst  index.rst  install.md  openapi.yaml
terraform/: main.tf  outputs.tf  variables.tf
terraform/api/: main.tf  variables.tf
