[metadata]
name = academic-observatory-api
author = Curtin University
author-email = agent@observatory.academy
summary = Test
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/The-Academic-Observatory/academic-observatory-api
project_urls =
    Bug Tracker = https://github.com/The-Academic-Observatory/academic-observatory-api/issues
    Source Code = https://github.com/The-Academic-Observatory/academic-observatory-api
python-requires = >=3.7
license = Apache License Version 2.0
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords =
    science
    data
    workflows
    academic institutes
    academic-observatory-workflows
    academic-observatory-api

[files]
packages =
    academic_observatory_api
data_files =
    requirements.txt = requirements.txt

[extras]
tests =
    liccheck>=0.4.9,<1
    flake8>=3.8.0,<4
    coverage>=5.2,<6

[pbr]
skip_authors = true
